--- a/app/calc1.html
+++ b/app/calc1.html
@@ -84,7 +84,7 @@
 					<div class="banner_appoint">
 						<span>Заказать расчет кровли<br>
 						у профессиональных специалистов. </span>
-						<a data-fancybox data-type="ajax" data-src="call.html" class="but gradient">Оставить заявку</a>
+						<a data-fancybox data-type="ajax" data-src="call.html" class="button gradient">Оставить заявку</a>
 					</div>
 					</div>
 				</div>
@@ -194,7 +194,7 @@
 				<a href="#" class="calc_back"></a>
 			</div>
 			<div class="col-md-6 d-flex justify-content-end">
-				<button class="but buy">перейти к выбору цвета</button>
+				<button class="button buy">перейти к выбору цвета</button>
 			</div>
 		</div>
 		<div class="row">
@@ -218,7 +218,7 @@
 						<input class="calc_form_input" placeholder="Комментарий" type="text"/>
 						</div>
 						<div class="col-md-2">
-						<button class="but buy">Отправить заявку</button>
+						<button class="button buy">Отправить заявку</button>
 						</div>
 					</div>
 			</form>
@@ -275,7 +275,7 @@
 							<a href="#">— MetroViksen</a>
 							<a href="#">— MetroCooper</a>
 							<a href="#">— Aquapan</a>	
-					<a data-fancybox data-type="ajax" data-src="call.html" class="but buy">Оставить заявку</a>
+					<a data-fancybox data-type="ajax" data-src="call.html" class="button buy">Оставить заявку</a>
 					</div>
 				</div>
 				<div class="offset-md-1 col-md-1">
