--- a/app/cart.html
+++ b/app/cart.html
@@ -143,7 +143,7 @@
 	</div>
 	<div class="row">
 		<div class="col-12 d-flex justify-content-end">
-		<button class="but buy margin_top_gut margin_bot100">оформить заказ</button></div>
+		<button class="button buy margin_top_gut margin_bot100">оформить заказ</button></div>
 	</div>
 	</form>
 	</div>
@@ -187,7 +187,7 @@
 							<a href="#">— MetroViksen</a>
 							<a href="#">— MetroCooper</a>
 							<a href="#">— Aquapan</a>	
-					<a data-fancybox data-type="ajax" data-src="call.html" class="but buy">Оставить заявку</a>
+					<a data-fancybox data-type="ajax" data-src="call.html" class="button buy">Оставить заявку</a>
 					</div>
 				</div>
 				<div class="offset-md-1 col-md-1">
