--- a/app/catalog_additional.html
+++ b/app/catalog_additional.html
@@ -124,7 +124,7 @@
 								<div class="catalog_add_price">
 									Цена от 586 ₽
 								</div>
-								<button class="but buy">купить</button>
+								<button class="button buy">купить</button>
 							</div>
 						</div>
 					</div>
@@ -136,7 +136,7 @@
 								<div class="catalog_add_price">
 									Цена от 586 ₽
 								</div>
-								<button class="but buy">купить</button>
+								<button class="button buy">купить</button>
 							</div>
 						</div>
 						<div class="col-md-4">
@@ -151,7 +151,7 @@
 				<div class="col-12">
 					<div class="professionals_banner">
 						<div class="row justify-content-center">Кровля метротайл — правильный выбор!</div>
-							<div class="row justify-content-center"><a href="#" class="but gradient">Получить консультацию</a></div>
+							<div class="row justify-content-center"><a href="#" class="button gradient">Получить консультацию</a></div>
 
 					</div>
 				</div>
@@ -226,7 +226,7 @@
 							<a href="#">— MetroViksen</a>
 							<a href="#">— MetroCooper</a>
 							<a href="#">— Aquapan</a>	
-					<a data-fancybox data-type="ajax" data-src="call.html" class="but buy">Оставить заявку</a>
+					<a data-fancybox data-type="ajax" data-src="call.html" class="button buy">Оставить заявку</a>
 					</div>
 				</div>
 				<div class="offset-md-1 col-md-1">
