--- a/app/catalog_spisok_tovarov.html
+++ b/app/catalog_spisok_tovarov.html
@@ -137,7 +137,7 @@
 						</div>
 						<div class="row">
 							<div class="col-12">
-								<button class="but buy accept">применить</button>
+								<button class="button buy accept">применить</button>
 								<a class="filter_clear" href="">сбросить</a>
 							</div>
 						</div>
@@ -211,7 +211,7 @@
 											<input class="shop_item_quantity-input" type="text" value="1111">
 											<div class="shop_item_quantity-plus">+</div>
 										</div>
-										<button class="but buy" type="submit">Купить</button>
+										<button class="button buy" type="submit">Купить</button>
 									</form>
 								</div>
 							</div>
@@ -266,7 +266,7 @@
 											<input class="shop_item_quantity-input" type="text" value="1111">
 											<div class="shop_item_quantity-plus">+</div>
 										</div>
-										<button class="but buy" type="submit">Купить</button>
+										<button class="button buy" type="submit">Купить</button>
 									</form>
 								</div>
 							</div>
@@ -320,7 +320,7 @@
 											<input class="shop_item_quantity-input" type="text" value="1111">
 											<div class="shop_item_quantity-plus">+</div>
 										</div>
-										<button class="but buy" type="submit">Купить</button>
+										<button class="button buy" type="submit">Купить</button>
 									</form>
 								</div>
 							</div>
@@ -470,7 +470,7 @@
 							<a href="#">— MetroViksen</a>
 							<a href="#">— MetroCooper</a>
 							<a href="#">— Aquapan</a>	
-					<a data-fancybox data-type="ajax" data-src="call.html" class="but buy">Оставить заявку</a>
+					<a data-fancybox data-type="ajax" data-src="call.html" class="button buy">Оставить заявку</a>
 					</div>
 				</div>
 				<div class="offset-md-1 col-md-1">
