--- a/app/contacts.html
+++ b/app/contacts.html
@@ -180,7 +180,7 @@
 		<div class="row">
 			<div class="col-12">
 			<div class="contacts_info margin_top100">
-				<h2 class="gradient text no_border">Реквизиты</h2><button class="but buy">Скопировать</button>				
+				<h2 class="gradient text no_border">Реквизиты</h2><button class="button buy">Скопировать</button>				
 			</div>
 			</div>
 		</div>
@@ -262,7 +262,7 @@
 							<a href="#">— MetroViksen</a>
 							<a href="#">— MetroCooper</a>
 							<a href="#">— Aquapan</a>	
-					<a data-fancybox data-type="ajax" data-src="call.html" class="but buy">Оставить заявку</a>
+					<a data-fancybox data-type="ajax" data-src="call.html" class="button buy">Оставить заявку</a>
 					</div>
 				</div>
 				<div class="offset-md-1 col-md-1">
