--- a/app/search.html
+++ b/app/search.html
@@ -80,7 +80,7 @@
 				<div class="search_input"><input class="calc_form_input" placeholder="Черепица" type="text"></div>
 			</div>
 			<div class="col-1">
-				<div class="but buy">найти</div>
+				<div class="button buy">найти</div>
 			</div>
 		</div>
 		<div class="row margin_top100">
@@ -160,7 +160,7 @@
 							<a href="#">— MetroViksen</a>
 							<a href="#">— MetroCooper</a>
 							<a href="#">— Aquapan</a>	
-					<a data-fancybox data-type="ajax" data-src="call.html" class="but buy">Оставить заявку</a>
+					<a data-fancybox data-type="ajax" data-src="call.html" class="button buy">Оставить заявку</a>
 					</div>
 				</div>
 				<div class="offset-md-1 col-md-1">
