--- a/app/vacancies.html
+++ b/app/vacancies.html
@@ -83,7 +83,7 @@
 						<div class="col-md-6">
 							<div class="vacancies_block">
 								<div class="vacancies_block_head">от 30 000 до 120 000 руб</div>
-								<button class="but buy accept">Откликнуться на вакансию</button>
+								<button class="button buy accept">Откликнуться на вакансию</button>
 								<div class="vacancies_block_txt">
 								<strong>Требуемый опыт работы:</strong>
 								<p>Не требуется</p>
@@ -142,7 +142,7 @@
 						<div class="col-md-6">
 							<div class="vacancies_block">
 								<div class="vacancies_block_head">от 30 000 до 120 000 руб</div>
-								<button class="but buy accept">Откликнуться на вакансию</button>
+								<button class="button buy accept">Откликнуться на вакансию</button>
 								<div class="vacancies_block_txt">
 								<strong>Требуемый опыт работы:</strong>
 								<p>Не требуется</p>
@@ -201,7 +201,7 @@
 						<div class="col-md-6">
 							<div class="vacancies_block">
 								<div class="vacancies_block_head">от 30 000 до 120 000 руб</div>
-								<button class="but buy accept">Откликнуться на вакансию</button>
+								<button class="button buy accept">Откликнуться на вакансию</button>
 								<div class="vacancies_block_txt">
 								<strong>Требуемый опыт работы:</strong>
 								<p>Не требуется</p>
@@ -260,7 +260,7 @@
 						<div class="col-md-6">
 							<div class="vacancies_block">
 								<div class="vacancies_block_head">от 30 000 до 120 000 руб</div>
-								<button class="but buy accept">Откликнуться на вакансию</button>
+								<button class="button buy accept">Откликнуться на вакансию</button>
 								<div class="vacancies_block_txt">
 								<strong>Требуемый опыт работы:</strong>
 								<p>Не требуется</p>
@@ -319,7 +319,7 @@
 						<div class="col-md-6">
 							<div class="vacancies_block">
 								<div class="vacancies_block_head">от 30 000 до 120 000 руб</div>
-								<button class="but buy accept">Откликнуться на вакансию</button>
+								<button class="button buy accept">Откликнуться на вакансию</button>
 								<div class="vacancies_block_txt">
 								<strong>Требуемый опыт работы:</strong>
 								<p>Не требуется</p>
@@ -416,7 +416,7 @@
 							<a href="#">— MetroViksen</a>
 							<a href="#">— MetroCooper</a>
 							<a href="#">— Aquapan</a>	
-					<a data-fancybox data-type="ajax" data-src="call.html" class="but buy">Оставить заявку</a>
+					<a data-fancybox data-type="ajax" data-src="call.html" class="button buy">Оставить заявку</a>
 					</div>
 				</div>
 				<div class="offset-md-1 col-md-1">
