--- a/app/call.html
+++ b/app/call.html
@@ -37,7 +37,7 @@
 					</div>
 					<div class="row">
 						<div class="col-md-2">
-						<button type="submit" class="but buy">Отправить</button>
+						<button type="submit" class="button buy">Отправить</button>
 						</div>
 					</div>
 			</form>
