--- a/app/news.html
+++ b/app/news.html
@@ -185,7 +185,7 @@
 				</div>
 				<div class="row">
 					<div class="col-12 d-flex justify-content-center margin_top100 margin_bot100">
-						<button class="but buy accept">Загрузить Ещё</button>
+						<button class="button buy accept">Загрузить Ещё</button>
 					</div>
 				</div>
 			</div>
@@ -229,7 +229,7 @@
 							<a href="#">— MetroViksen</a>
 							<a href="#">— MetroCooper</a>
 							<a href="#">— Aquapan</a>	
-					<a data-fancybox data-type="ajax" data-src="call.html" class="but buy">Оставить заявку</a>
+					<a data-fancybox data-type="ajax" data-src="call.html" class="button buy">Оставить заявку</a>
 					</div>
 				</div>
 				<div class="offset-md-1 col-md-1">
