--- a/app/order.html
+++ b/app/order.html
@@ -102,7 +102,7 @@
 					<div class="col-12">
 					<div class="order_block_button d-flex">
 						<div class="col d-flex align-self-start justify-content-end">
-							<button class="but buy accept">далее</button>
+							<button class="button buy accept">далее</button>
 						</div>
 					</div>
 					</div>
@@ -146,7 +146,7 @@
 					<div class="col-12">
 					<div class="order_block_button d-flex">
 						<div class="col d-flex align-self-start justify-content-end">
-							<button class="but buy accept">далее</button>
+							<button class="button buy accept">далее</button>
 						</div>
 					</div>
 					</div>
@@ -184,7 +184,7 @@
 							<a href="" class="blue_link with_arrow">Назад</a>
 						</div>
 						<div class="col d-flex align-self-start justify-content-end">
-							<button class="but buy accept">далее</button>
+							<button class="button buy accept">далее</button>
 						</div>
 					</div>
 					</div>
@@ -258,7 +258,7 @@
 							<div class="checkbox clearfix"><input type="checkbox" id="accept" name="accept"/><label for="accept">Соглашаюсь с <a href="#">Условиями продажи</a> и <a href="#">Политикой <br>обработки персональных данных</a></label></div>
 					</div>
 						<div class="col-md-6 d-flex justify-content-end">
-							<button type="submit" class="but buy accept order">оформить заказ</button>
+							<button type="submit" class="button buy accept order">оформить заказ</button>
 						</div>
 					
 				</div>
@@ -305,7 +305,7 @@
 							<a href="#">— MetroViksen</a>
 							<a href="#">— MetroCooper</a>
 							<a href="#">— Aquapan</a>	
-					<a data-fancybox data-type="ajax" data-src="call.html" class="but buy">Оставить заявку</a>
+					<a data-fancybox data-type="ajax" data-src="call.html" class="button buy">Оставить заявку</a>
 					</div>
 				</div>
 				<div class="offset-md-1 col-md-1">
