--- a/app/index.html
+++ b/app/index.html
@@ -82,7 +82,7 @@
 				<div class="col-md-6">
 					<h2 class="gradient text">Композитная<br> кровля из Бельгии</h2>
 					<div class="fz18">Компания Metroline является официальным дилером бельгийского концерна "Metroline Europe NV" в России. Высокое качество композитной кровли, цена от прямого производителя Metroline - два аргумента, чтобы сделать правильный выбор.</div>
-					<div class="b-stats d-flex">
+					<div class="b-stats b-stats__gutter d-flex">
 						<div class="b-stats__numbers d-flex align-items-center">
 							<span class="b-stats__numbers-num gradient text">10</span><span class="b-stats__numbers-title">Коллекций<br> кровли</span></span>
 						</div>
@@ -175,7 +175,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="container">
+		<div class="b-catalog container">
 			<div class="row">
 				<div class="col-12">
 					<div id="wideslider_counter2" class="counter"></div>
