--- a/app/calc1.html
+++ b/app/calc1.html
@@ -31,38 +31,32 @@
 <body>
 
 	<!-- Custom HTML -->
-	<header class="align-items-center">
-		
-	<div class="container">
-
-		<div class="row">
-			<div class="col-md-4 d-flex align-items-center">
-				<ul class="header_menu_left">
-					<li><a href="#">О компании</a></li>
-					<li><a href="#">Каталог</a></li>
-					<li><a href="#">Где купить</a></li>
-				</ul>
-			</div>
-			<div class="col-md-4 d-flex justify-content-center align-items-center">
-				<script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
-				<div class="header_logo"><a href="#"><img src="img/logo.png" srcset="logo.png 1x, logo@2x.png 2x" alt="метролайн"></a></div>
-			</div>
-			<div class="col-md-4 d-flex justify-content-end align-items-center">
-				<div class="header_menu_right">
-					<a href="tel:=+74953634432">+7 (495) 363 44 32</a>
-					<div class="header_menu_right_icons">
-						<a href="#"><i class="fas fa-search"></i></a>
-						<a href="#"><i class="far fa-user-circle"></i></a>
-						<a href="#"><i class="far fa-star"></i></a>
-						<a href="#"><i class="fas fa-shopping-bag"></i></a>
+	<header class="b-header align-items-center">
+		<div class="container">
+			<div class="row">
+				<div class="b-header__menu b-topmenu col-md-4 d-flex align-items-center">
+					<ul class="b-topmenu__list">
+						<li class="b-topmenu__item"><a href="#" class="b-topmenu__link">О компании</a></li>
+						<li class="b-topmenu__item"><a href="#" class="b-topmenu__link">Каталог</a></li>
+						<li class="b-topmenu__item"><a href="#" class="b-topmenu__link">Где купить</a></li>
+					</ul>
+				</div>
+				<div class="b-header__logo col-md-4 d-flex justify-content-center align-items-center">
+					<div class="b-header__logo-container"><a href="#" class="b-header__logo-link"><img src="img/logo.png" srcset="img/logo.png 1x, img/logo@2x.png 2x" alt="метролайн" class="b-header__logo-img"></a></div>
+				</div>
+				<div class="b-header__right col-md-4 d-flex justify-content-end align-items-center">
+					<a href="tel:=+74953634432" class="b-header__phone">+7 (495) 363 44 32</a>
+					<div class="b-header__icons-container b-header-icons">
+						<a href="#" class="b-header-icons__link"><i class="fas fa-search"></i></a>
+						<a href="#" class="b-header-icons__link"><i class="far fa-user-circle"></i></a>
+						<a href="#" class="b-header-icons__link"><i class="far fa-star"></i></a>
+						<a href="#" class="b-header-icons__link"><i class="fas fa-shopping-bag"></i></a>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-
 	</header>
-	<section class="calc">
+	<section class="b-calc">
 	<div class="container">
 		<div class="row breadcrums justify-content-center">
 			 <ul class="breadcrumb">
@@ -77,18 +71,18 @@
 	<div class="container-flued">
 		<div class="row">
 			<div class="col-12">
-			<div class="banner" style="background-image: url(/img/banner.png);">
+			<div class="b-topbanner" style="background-image: url(/img/banner.png);">
 				<div class="container pos_r">
 					<div class="row">
-					<div class="banner_txt">Расчет композитной черепицы – один из важнейших этапов при покупке композитной кровли. Правильно рассчитанный материал позволит сэкономить Ваши средства и время. Вам не придется ждать новой поставки композитной черепицы, если Вам не хватит каких-либо элементов кровли, в тоже время точный расчет позволит избежать излишков материала,<br> при этом Вы сократите расходы на кровлю. </div>
-					<div class="banner_appoint">
-						<span>Заказать расчет кровли<br>
+					<div class="b-topbanner__text">Расчет композитной черепицы – один из важнейших этапов при покупке композитной кровли. Правильно рассчитанный материал позволит сэкономить Ваши средства и время. Вам не придется ждать новой поставки композитной черепицы, если Вам не хватит каких-либо элементов кровли, в тоже время точный расчет позволит избежать излишков материала,<br> при этом Вы сократите расходы на кровлю. </div>
+					<div class="b-topbanner__appoint">
+						<span class="b-topbanner__appoint-text">Заказать расчет кровли<br>
 						у профессиональных специалистов. </span>
-						<a data-fancybox data-type="ajax" data-src="call.html" class="button gradient">Оставить заявку</a>
+						<a class="b-topbanner__appoint-link button gradient" data-fancybox data-type="ajax" data-src="call.html">Оставить заявку</a>
 					</div>
 					</div>
 				</div>
-				<a href="#" class="banner_video">
+				<a href="#" class="b-topbanner__video">
 					Посмотреть видеокурс
 				</a>
 			</div>
@@ -105,93 +99,94 @@
 		</div>
 		<div class="row">
 			<div class="col-12">
-				<div class="calc_tabs gradient_bg">
-					<div class="calc_tabs_el active"><span>1</span>Тип профиля</div>
-					<div class="calc_tabs_el"><span>2</span>Цвет кровли</div>
-					<div class="calc_tabs_el"><span>3</span>Основные размеры кровли</div>
+				<div class="b-calc__tabs gradient_bg">
+					<div class="b-calc__tabs-link active"><span class="b-calc__tabs-number">1</span>Тип профиля</div>
+					<div class="b-calc__tabs-link"><span class="b-calc__tabs-number">2</span>Цвет кровли</div>
+					<div class="b-calc__tabs-link"><span class="b-calc__tabs-number">3</span>Основные размеры кровли</div>
 				</div>
 			</div>
 		</div>
-		<div class="row calc_roof">
-			<div class="col-2">
-				<a href="#" class="calc_roof_img active">
-					<img src="img/calc_roof.png" alt="calc_roof">
+		<div class="row b-calc__item">
+			<div class="col-md-2">
+				<a href="#" class="b-calc__item-img active">
+					<img class="b-calc__item-imgelement" src="img/calc_roof.png" alt="calc_roof">
 				</a>
-				<a href="#" class="calc_roof_link">MetroBond</a>
+				<a href="#" class="b-calc__item-link">MetroBond</a>
 			</div>
 			<div class="col-2">
-				<a href="#" class="calc_roof_img">
-					<span class="gradient new_item">новинка</span>
-					<img src="img/calc_roof.png" alt="calc_roof">
+				<a href="#" class="b-calc__item-img">
+					<span class="gradient newitem">новинка</span>
+					<img class="b-calc__item-imgelement" src="img/calc_roof.png" alt="calc_roof">
 				</a>
-				<a href="#" class="calc_roof_link">MetroRoman</a>
+				<a href="#" class="b-calc__item-link">MetroRoman</a>
 			</div>
 			<div class="col-2">
-				<a href="#" class="calc_roof_img">
-					<img src="img/calc_roof.png" alt="calc_roof">
+				<a href="#" class="b-calc__item-img">
+					<img class="b-calc__item-imgelement" src="img/calc_roof.png" alt="calc_roof">
 				</a>
-				<a href="#" class="calc_roof_link">Metrotile Mistral</a>
+				<a href="#" class="b-calc__item-link">Metrotile Mistral</a>
 			</div>
 			<div class="col-2">
-				<a href="#" class="calc_roof_img">
-					<img src="img/calc_roof.png" alt="calc_roof">
+				<a href="#" class="b-calc__item-img">
+					<img class="b-calc__item-imgelement" src="img/calc_roof.png" alt="calc_roof">
 				</a>
-				<a href="#" class="calc_roof_link">MetroShake II</a>
+				<a href="#" class="b-calc__item-link">MetroShake II</a>
 			</div>
 			<div class="col-2">
-				<a href="#" class="calc_roof_img">
-					<img src="img/calc_roof.png" alt="calc_roof">
+				<a href="#" class="b-calc__item-img">
+					<img class="b-calc__item-imgelement" src="img/calc_roof.png" alt="calc_roof">
 				</a>
-				<a href="#" class="calc_roof_link">MetroClassic</a>
+				<a href="#" class="b-calc__item-link">MetroClassic</a>
 			</div>
 			<div class="col-2">
-				<a href="#" class="calc_roof_img">
-					<img src="img/calc_roof.png" alt="calc_roof">
+				<a href="#" class="b-calc__item-img">
+					<img class="b-calc__item-imgelement" src="img/calc_roof.png" alt="calc_roof">
 				</a>
-				<a href="#" class="calc_roof_link">Metrotile Gallo</a>
+				<a href="#" class="b-calc__item-link">Metrotile Gallo</a>
 			</div>
 		</div>
-		<div class="row calc_roof">
-			<div class="col-2">
-				<a href="#" class="calc_roof_img">
-					<img src="img/calc_roof.png" alt="calc_roof">
+		<div class="row b-calc__item">
+			<div class="col-md-2">
+				<a href="#" class="b-calc__item-img">
+					<img class="b-calc__item-imgelement" src="img/calc_roof.png" alt="calc_roof">
 				</a>
-				<a href="#" class="calc_roof_link">MetroBond</a>
+				<a href="#" class="b-calc__item-link">MetroBond</a>
 			</div>
 			<div class="col-2">
-				<a href="#" class="calc_roof_img">
-					<img src="img/calc_roof.png" alt="calc_roof">
+				<a href="#" class="b-calc__item-img">
+					<span class="gradient newitem">новинка</span>
+					<img class="b-calc__item-imgelement" src="img/calc_roof.png" alt="calc_roof">
 				</a>
-				<a href="#" class="calc_roof_link">MetroRoman</a>
+				<a href="#" class="b-calc__item-link">MetroRoman</a>
 			</div>
 			<div class="col-2">
-				<a href="#" class="calc_roof_img">
-					<img src="img/calc_roof.png" alt="calc_roof">
+				<a href="#" class="b-calc__item-img">
+					<img class="b-calc__item-imgelement" src="img/calc_roof.png" alt="calc_roof">
 				</a>
-				<a href="#" class="calc_roof_link">Metrotile Mistral</a>
+				<a href="#" class="b-calc__item-link">Metrotile Mistral</a>
 			</div>
 			<div class="col-2">
-				<a href="#" class="calc_roof_img">
-					<img src="img/calc_roof.png" alt="calc_roof">
+				<a href="#" class="b-calc__item-img">
+					<img class="b-calc__item-imgelement" src="img/calc_roof.png" alt="calc_roof">
 				</a>
-				<a href="#" class="calc_roof_link">MetroShake II</a>
+				<a href="#" class="b-calc__item-link">MetroShake II</a>
 			</div>
 			<div class="col-2">
-				<a href="#" class="calc_roof_img">
-					<img src="img/calc_roof.png" alt="calc_roof">
+				<a href="#" class="b-calc__item-img">
+					<img class="b-calc__item-imgelement" src="img/calc_roof.png" alt="calc_roof">
 				</a>
-				<a href="#" class="calc_roof_link">MetroClassic</a>
+				<a href="#" class="b-calc__item-link">MetroClassic</a>
 			</div>
 			<div class="col-2">
-				<a href="#" class="calc_roof_img">
-					<img src="img/calc_roof.png" alt="calc_roof">
+				<a href="#" class="b-calc__item-img">
+					<img class="b-calc__item-imgelement" src="img/calc_roof.png" alt="calc_roof">
 				</a>
-				<a href="#" class="calc_roof_link">Metrotile Gallo</a>
+				<a href="#" class="b-calc__item-link">Metrotile Gallo</a>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-6 d-flex">
-				<a href="#" class="calc_back"></a>
+				<a href="#" class="b-calc__back"></a>
 			</div>
 			<div class="col-md-6 d-flex justify-content-end">
 				<button class="button buy">перейти к выбору цвета</button>
@@ -199,25 +194,25 @@
 		</div>
 		<div class="row">
 			<div class="col-12">
-			<form action="" class="calc_form gradient_bg">
-				<div><div class="gradient new_item">Бесплатная услуга</div></div>
-				<div class="gradient text no_border">Что бы получить точный расчет, закажите у профессиональных специалистов.</div>
+			<form action="" class="b-calc__form gradient_bg">
+				<div><div class="gradient newitem">Бесплатная услуга</div></div>
+				<div class="b-calc__form-title gradient text no_border">Что бы получить точный расчет, закажите у профессиональных специалистов.</div>
 				<div class="row">
 					<div class="col-md-4">
-					<input class="calc_form_input" placeholder="Имя*" type="text"/>
+					<input class="b-calc__form-input" placeholder="Имя*" type="text"/>
 					</div>
 					<div class="col-md-4">
-					<input class="calc_form_input" placeholder="E-mail*" type="text"/>
+					<input class="b-calc__form-input" placeholder="E-mail*" type="text"/>
 					</div>
 					<div class="col-md-4">
-					<input class="calc_form_input" placeholder="Телефон*" type="text"/>
+					<input class="b-calc__form-input" placeholder="Телефон*" type="text"/>
 					</div>
 				</div>
 					<div class="row">
-						<div class="col-md-10">
-						<input class="calc_form_input" placeholder="Комментарий" type="text"/>
+						<div class="col-md-9">
+						<input class="b-calc__form-input" placeholder="Комментарий" type="text"/>
 						</div>
-						<div class="col-md-2">
+						<div class="col-md-3">
 						<button class="button buy">Отправить заявку</button>
 						</div>
 					</div>
@@ -227,9 +222,9 @@
 
 		<div class="row gutter_top margin_bot100">
 				<div class="col-12">
-					<div class="professionals_banner" style="background-image: url(img/calc_banner.png);">
-						<div class="row justify-content-center">Где купить</div>
-							<div class="row justify-content-center"><a href="#" class="but">Сертифицированные строительные компании</a></div>
+					<div class="b-midbanner" style="background-image: url(img/calc_banner.png);">
+						<div class="b-midbanner__title row justify-content-center">Где купить</div>
+							<div class="row justify-content-center"><a href="#" class="b-midbanner__button button">Сертифицированные строительные компании</a></div>
 
 					</div>
 				</div>
@@ -237,74 +232,86 @@
 	</div>
 	</section>
 
-	<footer class="gradient_bg">
+	<footer class="footer gradient_bg">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-2">
-					<div class="footer_logo">© 2014 METROTILE</div>
-					<div class="social">
-						<a href="#"><i class="demo-icon icon-inst"></i></a>
-						<a href="#"><i class="demo-icon icon-vk"></i></a>
-						<a href="#"><i class="demo-icon icon-facebook"></i></a>
-						<a href="#"><i class="demo-icon icon-vimeo"></i></a>
-						<a href="#"><i class="demo-icon icon-youtube"></i></a>
-						<a href="#"><i class="demo-icon icon-gplus"></i></a>
+				<div class="footer__col">
+					<div class="footer__logo">© 2014 METROTILE</div>
+					<div class="footer__menu-social social">
+						<a class="social__link" href="#"><i class="demo-icon icon-inst"></i></a>
+						<a class="social__link" href="#"><i class="demo-icon icon-vk"></i></a>
+						<a class="social__link" href="#"><i class="demo-icon icon-facebook"></i></a>
+						<a class="social__link" href="#"><i class="demo-icon icon-vimeo"></i></a>
+						<a class="social__link" href="#"><i class="demo-icon icon-youtube"></i></a>
+						<a class="social__link" href="#"><i class="demo-icon icon-gplus"></i></a>
 					</div>
-					<div class="footer_menu_left">
-							<a href="#">О компании</a>
-							<a href="#">Партнерство</a>
-							<a href="#">Учебный центр</a>
-							<a href="#">Пресс центр</a>
-							<a href="#">Где купить</a>
-							<a href="#">Контакты</a>
-							<a href="#">Монтаж</a>
-							<a href="#">Расчет черепицы</a>
-							<a href="#">Акции</a>
-							<a href="#">Карта сайта</a>	
-					</div>
-				</div>
-				<div class="offset-md-1 col-md-2">
-					<div class="footer_menu_left">
-							<a href="#">— MetroBond</a>
-							<a href="#">— MetroRoman </a>
-							<a href="#">— Metrotile Mistral</a>
-							<a href="#">— MetroShake II</a>
-							<a href="#">— MetroClassic</a>
-							<a href="#">— Metrotile Gallo</a>
-							<a href="#">— Metrotile Romana</a>
-							<a href="#">— MetroViksen</a>
-							<a href="#">— MetroCooper</a>
-							<a href="#">— Aquapan</a>	
-					<a data-fancybox data-type="ajax" data-src="call.html" class="button buy">Оставить заявку</a>
+					<div class="footer__menu">
+							<a class="footer__menu-link" href="#">О компании</a>
+							<a class="footer__menu-link" href="#">Партнерство</a>
+							<a class="footer__menu-link" href="#">Учебный центр</a>
+							<a class="footer__menu-link" href="#">Пресс центр</a>
+							<a class="footer__menu-link" href="#">Где купить</a>
+							<a class="footer__menu-link" href="#">Контакты</a>
+							<a class="footer__menu-link" href="#">Монтаж</a>
+							<a class="footer__menu-link" href="#">Расчет черепицы</a>
+							<a class="footer__menu-link" href="#">Акции</a>
+							<a class="footer__menu-link" href="#">Карта сайта</a>	
 					</div>
 				</div>
-				<div class="offset-md-1 col-md-1">
-					<div class="footer_menu_left">
-						<a href="#" class="new_item gradient">новинки</a>
-							<a href="#">— Metrotile IPanel</a>
-							<a href="#">— Metrotile ISlate</a>
-							<a href="#">— Metrotile IShake</a>
-							<a href="#">— Metrotile IShingle</a>
+				<div class="footer__col">
+					<div class="footer__menu">
+							<a class="footer__menu-link" href="#">— MetroBond</a>
+							<a class="footer__menu-link" href="#">— MetroRoman </a>
+							<a class="footer__menu-link" href="#">— Metrotile Mistral</a>
+							<a class="footer__menu-link" href="#">— MetroShake II</a>
+							<a class="footer__menu-link" href="#">— MetroClassic</a>
+							<a class="footer__menu-link" href="#">— Metrotile Gallo</a>
+							<a class="footer__menu-link" href="#">— Metrotile Romana</a>
+							<a class="footer__menu-link" href="#">— MetroViksen</a>
+							<a class="footer__menu-link" href="#">— MetroCooper</a>
+							<a class="footer__menu-link" href="#">— Aquapan</a>	
+					<a data-fancybox data-type="ajax" data-src="call.html" href="#" class="button buy">Оставить заявку</a>
 					</div>
 				</div>
-				<div class="offset-md-1 col-md-2 footer_address">
-					<b>Адрес</b>
-					<div>105120, Москва, Костомаровский пер., д. 3, офис 423</div>
-					<a class="subscribe" href="#"><b>Подпишитесь на новости</b></a>
-					<div class="madein">СДЕЛАНО В <a href="#"></a></div>
+				<div class="footer__col">
+					<div class="footer__menu">
+						<div class="footer__newitems"><a href="#" class="newitem gradient">новинки</a></div>
+							<a class="footer__menu-link" href="#">— Metrotile IPanel</a>
+							<a class="footer__menu-link" href="#">— Metrotile ISlate</a>
+							<a class="footer__menu-link" href="#">— Metrotile IShake</a>
+							<a class="footer__menu-link" href="#">— Metrotile IShingle</a>
+					</div>
 				</div>
-				<div class="col-md-2 footer_contacts">
-					<b>Контакты</b>
-					<a class="phone" href="tel:74953634432">+7 (495) 363 44 32</a>
-					<a class="phone" href="tel:74957874760">+7 (495) 787 47 60</a>
-					<a class="email" href="mailto:company@metrotile.ru">company@metrotile.ru</a>
-					<a href="#" class="blue_link">Подписаться</a>
-				</div>
+				<div class="footer__contacts">
+					<div class="row">
+						<div class="col-md-6">
+							<b class="footer__contacts-title">Адрес</b>
+							<div>105120, Москва, Костомаровский пер., д. 3, офис 423</div>
+						</div>
+						<div class="col-md-6">
+							<b class="footer__contacts-title">Контакты</b>
+							<a class="footer__contacts-phone" href="tel:74953634432">+7 (495) 363 44 32</a>
+							<a class="footer__contacts-phone" href="tel:74957874760">+7 (495) 787 47 60</a>
+							<a class="footer__contacts-email" href="mailto:company@metrotile.ru">company@metrotile.ru</a>
+						</div>
+					</div>
+					<div class="row align-items-end">
+						<div class="col-6">
+							<input class="footer__contacts-subscribe" placeholder="Подпишитесь на новости"/>
+						</div>
+						<div class="col-6 d-flex justify-content-start">
+							<a href="#" class="footer__contacts-link blue_link">Подписаться</a>
+						</div>
+						
+					</div>
+					<div class="footer__contacts-madein">СДЕЛАНО В <a class="footer__logo-img" href="#"></a></div>
 				</div>
 			</div>
-		<a href="#" class="footer_up">наверх</a>
+			</div>
+		<a href="#" class="footer__up">наверх</a>
 	</footer>
 	<script src="js/scripts.min.js"></script>
+	<script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
 
 </body>
 </html>
