--- a/app/call.html
+++ b/app/call.html
@@ -1,29 +1,29 @@
-		<div class="container">
+		<div class="b-calc container">
 		<div class="row">
 			<div class="col-12">
-			<form action="" class="calc_form gradient_bg fancy_call">
+			<form action="" class="b-calc__form gradient_bg fancy_call">
 				<h2 class="gradient text no_border">Заказать звонок</h2>
 				<div class="row">
 					<div class="col-12">
-					<input class="calc_form_input" placeholder="ФИО*" type="text"/>
+					<input class="b-calc__form-input" placeholder="ФИО*" type="text"/>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-6">
-					<input class="calc_form_input" placeholder="E-mail*" type="text"/>
+					<input class="b-calc__form-input" placeholder="E-mail*" type="text"/>
 					</div>
 					<div class="col-md-6">
-					<input class="calc_form_input" placeholder="Телефон*" type="text"/>
+					<input class="b-calc__form-input" placeholder="Телефон*" type="text"/>
 					</div>
 				</div>
 					<div class="row">
 						<div class="col-12">
-						<input class="calc_form_input" placeholder="Город*" type="text"/>
+						<input class="b-calc__form-input" placeholder="Город*" type="text"/>
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-12 select_wrap">
-							<select name="" id="" class="select">
+						<div class="col-12 b-select__wrap">
+							<select name="" id="" class="b-select__container">
 								<option value="1">Какая коллекция интересует?</option>
 								<option value="2">Какая коллекция интересует?</option>
 								<option value="3">Какая коллекция интересует?</option>
@@ -32,7 +32,7 @@
 					</div>
 					<div class="row">
 						<div class="col-12">
-						<input class="calc_form_input" placeholder="Комментарии к заказу:" type="text"/>
+						<input class="b-calc__form-input" placeholder="Комментарии к заказу:" type="text"/>
 						</div>
 					</div>
 					<div class="row">
