--- a/app/mount.html
+++ b/app/mount.html
@@ -71,15 +71,13 @@
 	<div class="container-flued">
 		<div class="row">
 			<div class="col-12">
-			<div class="b-topbanner" style="background-image: url(img/banner2.png);">
+			<div class="b-topbanner banner3" style="background-image: url(img/banner2.png);">
 				<div class="b-topbanner__wrapper container">
-					<div class="row">
-					<div class="b-topbanner__container">
-						<div class="b-topbanner__title gradient">Профессиональные<br>специалисты</div>
-							<div class="b-topbanner__text">Бельгийская компания Metrotile известна во всем мире и имеет официальные представительства во многих странах. Россия относиться к перспективным рынкам сбыта, поэтому в большинстве российских городов есть официальные дилеры, которые производят продажу и профессиональный монтаж композитной черепицы.
-							</div>
+						<div class="b-topbanner__container">
+							<div class="b-topbanner__title gradient">Профессиональные<br>специалисты</div>
+								<div class="b-topbanner__text mount_txt">Бельгийская компания Metrotile известна во всем мире и имеет официальные представительства во многих странах. Россия относиться к перспективным рынкам сбыта, поэтому в большинстве российских городов есть официальные дилеры, которые производят продажу и профессиональный монтаж композитной черепицы.
+								</div>
 						</div>
-					</div>
 				</div>
 			</div>
 				
@@ -94,9 +92,9 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4">
-					<div class="mounts_block">
-						<a href="#" class="blue_link margin_bot_gut">КОМПАНИЯ ЕВРОСКАТ</a>
-						<p>
+					<div class="b-mounts__container">
+						<a href="#" class="b-mounts__container-link blue_link">КОМПАНИЯ ЕВРОСКАТ</a>
+						<p class="b-mounts__container-text">
 							<strong>Адрес:</strong>
 							<span>Московская обл, Мытищинский район,<br> д.Коргашино, ул.Тарасовская,<br> д.7 ТЦ Пироговский</span>
 						</p>
@@ -107,27 +105,27 @@
 					</div>
 				</div>
 				<div class="col-md-4">
-					<div class="mounts_block">
-						<a href="#" class="blue_link margin_bot_gut">КОМПАНИЯ АРХИТЕКТУРА И СТРОИТЕЛЬСТВО</a>
-						<p>
-							<strong>Адрес:</strong>
-							<span>ул. Мневники д.3 к.1 оф. 522</span>
+					<div class="b-mounts__container">
+						<a href="#" class="b-mounts__container-link blue_link">КОМПАНИЯ АРХИТЕКТУРА И СТРОИТЕЛЬСТВО</a>
+						<p class="b-mounts__container-text">
+							<strong class="b-mounts__container-bold">Адрес:</strong>
+							<span class="b-mounts__container-thin">ул. Мневники д.3 к.1 оф. 522</span>
 						</p>
-						<p>
-							<strong>Телефон:</strong>
-							<span>8 (495) 924 00 72</span>
+						<p class="b-mounts__container-text">
+							<strong class="b-mounts__container-bold">Телефон:</strong>
+							<span class="b-mounts__container-thin">8 (495) 924 00 72</span>
 						</p>
 					</div>
 				</div>
 				<div class="col-md-4">
-					<div class="mounts_block">
-						<a href="#" class="blue_link margin_bot_gut">КОМПАНИЯ ROOFFER</a>
-						<p>
-							<strong>Адрес:</strong>
+					<div class="b-mounts__container">
+						<a href="#" class="b-mounts__container-link blue_link margin_bot_gut">КОМПАНИЯ ROOFFER</a>
+						<p class="b-mounts__container-text">
+							<strong class="b-mounts__container-bold">Адрес:</strong>
 							<span>г. Истра, ул. Советская 45</span>
 						</p>
-						<p>
-							<strong>Телефон:</strong>
+						<p class="b-mounts__container-text">
+							<strong class="b-mounts__container-bold">Телефон:</strong>
 							<span>8 (499) 340 60 44</span>
 						</p>
 					</div>
@@ -135,36 +133,36 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4">
-					<div class="mounts_block">
-						<a href="#" class="blue_link margin_bot_gut">ХРАМЦОВ ВАДИМ ЮРЬЕВИЧ</a>
-						<p>
-							<strong>Адрес:</strong>
+					<div class="b-mounts__container">
+						<a href="#" class="b-mounts__container-link blue_link">ХРАМЦОВ ВАДИМ ЮРЬЕВИЧ</a>
+						<p class="b-mounts__container-text">
+							<strong class="b-mounts__container-bold">Адрес:</strong>
 							<span>МКАД 14-й км, ТРЦ "Мега "Белая Дача"</span>
 						</p>
-						<p>
-							<strong>Телефон:</strong>
+						<p class="b-mounts__container-text">
+							<strong class="b-mounts__container-bold">Телефон:</strong>
 							<span>8 916 202 04 10<br>8 (495) 765 53 64</span>
 						</p>
 					</div>
 				</div>
 				<div class="col-md-4">
-					<div class="mounts_block">
-						<a href="#" class="blue_link margin_bot_gut">СТОРОЩУК ОЛЕГ ИВАНОВИЧ</a>
-						<p>
-							<strong>Телефон:</strong>
+					<div class="b-mounts__container">
+						<a href="#" class="b-mounts__container-link blue_link">СТОРОЩУК ОЛЕГ ИВАНОВИЧ</a>
+						<p class="b-mounts__container-text">
+							<strong class="b-mounts__container-bold">Телефон:</strong>
 							<span>8 (905) 523-03-62</span>
 						</p>
 					</div>
 				</div>
 				<div class="col-md-4">
-					<div class="mounts_block">
-						<a href="#" class="blue_link margin_bot_gut">К-М-С</a>
-						<p>
-							<strong>Адрес:</strong>
+					<div class="b-mounts__container">
+						<a href="#" class="b-mounts__container-link blue_link">К-М-С</a>
+						<p class="b-mounts__container-text">
+							<strong class="b-mounts__container-bold">Адрес:</strong>
 							<span>БП «Румянцево», 18 под-д, оф. 721а</span>
 						</p>
-						<p>
-							<strong>Телефон:</strong>
+						<p class="b-mounts__container-text">
+							<strong class="b-mounts__container-bold">Телефон:</strong>
 							<span>8 (495) 545-13-3</span>
 						</p>
 					</div>
@@ -172,85 +170,85 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4">
-					<div class="mounts_block">
-						<a href="#" class="blue_link margin_bot_gut">КОМПАНИЯ МЕЛТЕК</a>
-						<p>
-							<strong>Адрес:</strong>
+					<div class="b-mounts__container">
+						<a href="#" class="b-mounts__container-link blue_link">КОМПАНИЯ МЕЛТЕК</a>
+						<p class="b-mounts__container-text">
+							<strong class="b-mounts__container-bold">Адрес:</strong>
 							<span>г. Химки ул. Молодежная д.1</span>
 						</p>
-						<p>
-							<strong>Телефон:</strong>
+						<p class="b-mounts__container-text">
+							<strong class="b-mounts__container-bold">Телефон:</strong>
 							<span>8 (495) 780 28 48<br>8 (495) 974 82 43</span>
 						</p>
 					</div>
 				</div>
 				<div class="col-md-4">
-					<div class="mounts_block">
-						<a href="#" class="blue_link margin_bot_gut">КОМПАНИЯ РУФКРЕП</a>
-						<p>
-							<strong>Адрес:</strong>
+					<div class="b-mounts__container">
+						<a href="#" class="b-mounts__container-link blue_link">КОМПАНИЯ РУФКРЕП</a>
+						<p class="b-mounts__container-text">
+							<strong class="b-mounts__container-bold">Адрес:</strong>
 							<span>г. Чехов, ул. Чехова 20б</span>
 						</p>
-						<p>
-							<strong>Телефон:</strong>
+						<p class="b-mounts__container-text">
+							<strong class="b-mounts__container-bold">Телефон:</strong>
 							<span>8 999 82 777 22<br>8 496 72 777 22</span>
 						</p>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="mounts_block">
-						<a href="#" class="blue_link margin_bot_gut">ИП МАКСЮТА ВЯЧЕСЛАВ</a>
-						<p>
-							<strong>Телефон:</strong>
+						<a href="#" class="b-mounts__container-link blue_link">ИП МАКСЮТА ВЯЧЕСЛАВ</a>
+						<p class="b-mounts__container-text">
+							<strong class="b-mounts__container-bold">Телефон:</strong>
 							<span>8 (495) 221 88 10<br>8 (926) 589 30 86</span>
 						</p>
 					</div>
 				</div>
 			</div>
-			<div class="row links">
+			<div class="row b-links">
 				<div class="col-12">
 					<div class="d-flex">
-						<div class="links_block no_icon" style="background-image: url(img/links_block.png);">
-							<a href="#"></a>
-							<span>где купить</span>
+						<div class="b-links__block no_icon" style="background-image: url(img/links_block.png);">
+							<a class="b-links__link" href="#"></a>
+							<span class="b-links__title">где купить</span>
 						</div>
-						<div class="links_block icon icon1">
-							<a href="#"></a>
-							<span>расчет<br>кровли</span>
+						<div class="b-links__block icon icon1">
+							<a class="b-links__link" href="#"></a>
+							<span class="b-links__title">расчет<br>кровли</span>
 						</div>
-						<div class="links_block no_icon" style="background-image: url(img/links_block2.png);">
-							<a href="#"></a>
+						<div class="b-links__block no_icon" style="background-image: url(img/links_block2.png);">
+							<a class="b-links__link" href="#"></a>
 							Инструкции<br> по монтажу<br>Metrotile
 						</div>
-						<div class="links_block icon icon2">
-							<a href="#"></a>
-							<span>Учебное видео</span>
+						<div class="b-links__block icon icon2">
+							<a class="b-links__link" href="#"></a>
+							<span class="b-links__title">Учебное видео</span>
 						</div>
-						<div class="links_block no_icon" style="background-image: url(img/links_block3.png);">
-							<a href="#"></a>
+						<div class="b-links__block no_icon" style="background-image: url(img/links_block3.png);">
+							<a class="b-links__link" href="#"></a>
 							Инструкции<br> по монтажу
 						</div>
 					</div>
 					<div class="d-flex">
-						<div class="links_block icon icon8">
-							<a href="#"></a>
-							<span>Новости учебного центра</span>
+						<div class="b-links__block icon icon8">
+							<a class="b-links__link" href="#"></a>
+							<span class="b-links__title">Новости учебного центра</span>
 						</div>
-						<div class="links_block no_icon" style="background-image: url(img/links_block9.png);">
-							<a href="#"></a>
+						<div class="b-links__block no_icon" style="background-image: url(img/links_block9.png);">
+							<a class="b-links__link" href="#"></a>
 							Шеф-монтаж
 						</div>
-						<div class="links_block icon icon5">
-							<a href="#"></a>
-							<span>Новости</span>
+						<div class="b-links__block icon icon5">
+							<a class="b-links__link" href="#"></a>
+							<span class="b-links__title">Новости</span>
 						</div>
-						<div class="links_block no_icon" style="background-image: url(img/links_block6.png);">
-							<a href="#"></a>
+						<div class="b-links__block no_icon" style="background-image: url(img/links_block6.png);">
+							<a class="b-links__link" href="#"></a>
 							мы в соцсетях
 						</div>
-						<div class="links_block icon icon9">
-							<a href="#"></a>
-							<span>Доставка</span>
+						<div class="b-links__block icon icon9">
+							<a class="b-links__link" href="#"></a>
+							<span class="b-links__title">Доставка</span>
 						</div>
 					</div>
 				</div>
@@ -260,12 +258,12 @@
 					<h2 class="gradient text no_border">Профессиональный монтаж композитной кровли во всех регионах России</h2>
 				</div>
 			</div>
-			<div class="row  seo_text margin_top100 align-items-center">
-				<div class="col-md-4">
-					<div class="seo_text_pic seo_text_pic_wrap" style="background: url(img/seo_mount.png) no-repeat center;"></div>
+			<div class="b-seo row margin_top100">
+				<div class="col-md-5">
+					<div class="b-seo__container" style="background: url(img/seo_mount.png) no-repeat;"></div>
 				</div>
-				<div class="offset-md-1 col-md-7">
-					<div class="seo_text_block">
+				<div class="col-md-7">
+					<div class="b-seo__block">
 					<p>Укладка композитной черепицы производиться в соответствии с утвержденными стандартами строительства, требованиями техники безопасности и инструкциями компании-изготовителя. В процессе проведения монтажных работ обязательно учитываются технические характеристики материала и конструктивные особенности здания, условия эксплуатации помещений и климатические факторы региона. </p>
 					<p>В дилерских центрах профильные специалисты обучаются технологии монтажа композитной кровли по инструкциям производителя. После окончания учебы мастера проходят стажировку на крупных строительных объектах и только затем получают профессиональные сертификаты, являющиеся гарантией того, что укладка композитной черепицы будет выполнена на высоком профессиональном уровне.</p>
 					<h3>В каждом дилерском центре можно получить комплекс профессиональных услуг по монтажу композитной кровли:</h3>
@@ -273,9 +271,7 @@
 					<p>Для работы со строителями компания Metrotile разработала специальную программу сотрудничества в которая предусматривает:</p>
 					<ul>
 						<li>Вызов специалиста для обмера объекта и расчета необходимого количества материала;</li>
-						<li>Детальную смету, в которой будут указаны применяемые основные и расходные материалы, 
-а так же стоимость монтажа композитной черепицы; 
-</li>
+						<li>Детальную смету, в которой будут указаны применяемые основные и расходные материалы, а так же стоимость монтажа композитной черепицы; </li>
 						<li>Приобрести сертифицированную продукцию в строгом соответствии с проектно-технической документацией и рассчитанной сметой;</li>
 						<li>Уточнить график и сроки укладки композитной черепицы;</li>
 					</ul>
