--- a/app/contacts.html
+++ b/app/contacts.html
@@ -56,7 +56,7 @@
 			</div>
 		</div>
 	</header>
-	<section class="contacts">
+	<section>
 	<div class="container">
 		<div class="row breadcrums justify-content-center">
 			 <ul class="breadcrumb">
