--- a/app/text_news.html
+++ b/app/text_news.html
@@ -31,36 +31,30 @@
 <body>
 
 	<!-- Custom HTML -->
-	<header class="align-items-center">
-		
-	<div class="container">
-
-		<div class="row">
-			<div class="col-md-4 d-flex align-items-center">
-				<ul class="header_menu_left">
-					<li><a href="#">О компании</a></li>
-					<li><a href="#">Каталог</a></li>
-					<li><a href="#">Где купить</a></li>
-				</ul>
-			</div>
-			<div class="col-md-4 d-flex justify-content-center align-items-center">
-				<script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
-				<div class="header_logo"><a href="#"><img src="img/logo.png" srcset="logo.png 1x, logo@2x.png 2x" alt="метролайн"></a></div>
-			</div>
-			<div class="col-md-4 d-flex justify-content-end align-items-center">
-				<div class="header_menu_right">
-					<a href="tel:=+74953634432">+7 (495) 363 44 32</a>
-					<div class="header_menu_right_icons">
-						<a href="#"><i class="fas fa-search"></i></a>
-						<a href="#"><i class="far fa-user-circle"></i></a>
-						<a href="#"><i class="far fa-star"></i></a>
-						<a href="#"><i class="fas fa-shopping-bag"></i></a>
+	<header class="b-header align-items-center">
+		<div class="container">
+			<div class="row">
+				<div class="b-header__menu b-topmenu col-md-4 d-flex align-items-center">
+					<ul class="b-topmenu__list">
+						<li class="b-topmenu__item"><a href="#" class="b-topmenu__link">О компании</a></li>
+						<li class="b-topmenu__item"><a href="#" class="b-topmenu__link">Каталог</a></li>
+						<li class="b-topmenu__item"><a href="#" class="b-topmenu__link">Где купить</a></li>
+					</ul>
+				</div>
+				<div class="b-header__logo col-md-4 d-flex justify-content-center align-items-center">
+					<div class="b-header__logo-container"><a href="#" class="b-header__logo-link"><img src="img/logo.png" srcset="img/logo.png 1x, img/logo@2x.png 2x" alt="метролайн" class="b-header__logo-img"></a></div>
+				</div>
+				<div class="b-header__right col-md-4 d-flex justify-content-end align-items-center">
+					<a href="tel:=+74953634432" class="b-header__phone">+7 (495) 363 44 32</a>
+					<div class="b-header__icons-container b-header-icons">
+						<a href="#" class="b-header-icons__link"><i class="fas fa-search"></i></a>
+						<a href="#" class="b-header-icons__link"><i class="far fa-user-circle"></i></a>
+						<a href="#" class="b-header-icons__link"><i class="far fa-star"></i></a>
+						<a href="#" class="b-header-icons__link"><i class="fas fa-shopping-bag"></i></a>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-
 	</header>
 	<section>
 	<div class="container">
@@ -79,20 +73,17 @@
 	</div>
 		<div class="container-fluid">			
 			<div class="row">
-				<div class="banner banner4" style="background-image: url(img/text_news_banner.png);">
-					<div class="container pos_r">
-					</div>
-					
+				<div class="b-topbanner banner4" style="background-image: url(img/text_news_banner.jpg);">					
 				</div>
 			</div>
 		</div>
-		<div class="container">
+		<div class="b-detail container">
 			<div class="row">
 				<div class="offset-md-1 col-9">
-					<div class="text_news">
+					<div class="b-detail__text">
 						<p><strong>Компания Метротайл представляет уникальную новинку на российском кровельном рынке — композитную черепица в профиле ISlate. </strong></p>
 						<p>Новый профиль ISlate разработан на основе инновационных решений. Помимо неизменного качества бельгийского материала, профиль ISlate имеет форму и крепится ключом. Ключом называют соединение <br>по принципу Z образного замка, которое позволяет скреплять листы между собой. Это считается самым прочным и надежным креплением, которое делает кровлю единым целым покрытием. </p>
-						<p class="gradient_bg">Форма профиля создана по подобию натурального стланца и может иметь различный фактурный рисунок в любой из 24 цветовых палитрах.</p>
+						<p class="b-detail__gradient gradient_bg">Форма профиля создана по подобию натурального стланца и может иметь различный фактурный рисунок в любой из 24 цветовых палитрах.</p>
 						<p>Еще одной уникальной чертой профиля является его форма. Она сделана таким образом, что мест соединений совсем не видно. Соединение листов в замок делает покрытие очень прочным и при этом скрывает штучность кровельного покрытия. </p>
 						<p>Внешнему виду любого дома покрытого кровлей Metrotile ISlate позавидуют многие. Форма профиля создана по подобию натурального стланца и может иметь различный фактурный рисунок. Купить профиль Metrotile iSlate Вы сможете в любой из 24 цветовых палитрах. </p>
 					</div>
@@ -108,7 +99,7 @@
 			</div>
 			<div class="row">
 				<div class="offset-md-1 col-8">
-					<div class="text_news">
+					<div class="b-detail__text">
 						<h2 class="gradient text no_border">Уникальные преимущества профиля Metrotile iSlate:</h2>
 						<ul>
 							<li>Прочность и надежность композитного покрытия. Официальная гарантия бельгийского производителя 30 лет. Срок службы более 50 лет.</li>
@@ -118,134 +109,147 @@
 						</ul>
 					</div>
 				</div>
-			</div>					
-				<div class="row">
-					<div class="offset-md-1 col-11">
-					<div class="news_tabs">
-						<a href="#" class="gradient text">Новости</a>
-					</div>
-					<div class="counter"></div>
-					<div id="slider_index4" class="owl-carousel slider_index2">
-						<div class="news_item">
-							<div class="news_item_img">
-								<img src="img/news1.png" alt="slider_index4">
-							</div>
-							<div class="news_item_disc">
-								<div class="news_item_date">5 января</div>
-								<a class="news_item_head">Юбилей — 20 лет!</a>
-								<div class="news_item_txt">1 декабря компания Metrotile Europe отметила свое 20-летие. Мероприятие прошло в г. Тонгерен, Бельгия. </div>
-							</div>
-						</div>
-						<div class="news_item">
-							<div class="news_item_img">
-								<img src="img/news1.png" alt="slider_index4">
-							</div>
-							<div class="news_item_disc">
-								<div class="news_item_date">5 января</div>
-								<a class="news_item_head">Юбилей — 20 лет!</a>
-								<div class="news_item_txt">1 декабря компания Metrotile Europe отметила свое 20-летие. Мероприятие прошло в г. Тонгерен, Бельгия. </div>
-							</div>
-						</div>
-						<div class="news_item banner" style="background: url(img/news_banner.png) no-repeat;">
-							<div class="news_item_disc">
-								<div class="news_item_date">5 января</div>
-								<a class="news_item_head">Юбилей — 20 лет!</a>
-								<div class="news_item_txt">Обучающая программа <br>в области композитной<br> черепицы, с целью<br> поддержания высокого уровня<br> знаний продающего штата<br> сотрудников.</div>
-							</div>
-						</div>
-						<div class="news_item">
-							<div class="news_item_img">
-								<img src="img/news1.png" alt="slider_index4">
-							</div>
-							<div class="news_item_disc">
-								<div class="news_item_date">5 января</div>
-								<a class="news_item_head">Юбилей — 20 лет!</a>
-								<div class="news_item_txt">1 декабря компания Metrotile Europe отметила свое 20-летие. Мероприятие прошло в г. Тонгерен, Бельгия. </div>
-							</div>
-						</div>
-						<div class="news_item">
-							<div class="news_item_img">
-								<img src="img/news1.png" alt="slider_index4">
-							</div>
-							<div class="news_item_disc">
-								<div class="news_item_date">5 января</div>
-								<a class="news_item_head">Юбилей — 20 лет!</a>
-								<div class="news_item_txt">1 декабря компания Metrotile Europe отметила свое 20-летие. Мероприятие прошло в г. Тонгерен, Бельгия. </div>
-							</div>
-						</div>
-					</div>
-					</div>
-					</div>
-				</div>
-	</section>
-	<footer class="gradient_bg">
-		<div class="container">
+			</div>
 			<div class="row">
-				<div class="col-md-2">
-					<div class="footer_logo">© 2014 METROTILE</div>
-					<div class="social">
-						<a href="#"><i class="demo-icon icon-inst"></i></a>
-						<a href="#"><i class="demo-icon icon-vk"></i></a>
-						<a href="#"><i class="demo-icon icon-facebook"></i></a>
-						<a href="#"><i class="demo-icon icon-vimeo"></i></a>
-						<a href="#"><i class="demo-icon icon-youtube"></i></a>
-						<a href="#"><i class="demo-icon icon-gplus"></i></a>
+				<div class="col-12">
+				<h2 class="gradient text">Все новости</h2>
+				</div>
+			</div>					
+				<div class="b-news row">
+					<div class="col-12">
+					<div id="wideslider_counter3" class="counter"></div>
+					<div id="wideslider3" class="owl-carousel wideslider">
+						<div class="b-news__item">
+							<div class="b-news__img">
+								<img class="b-news__img-element" src="img/news1.png" alt="news">
+							</div>
+							<div class="b-news__desc">
+								<div class="b-news__desc-date">5 января</div>
+								<a class="b-news__desc-title">Юбилей — 20 лет!</a>
+								<div class="b-news__desc-text">1 декабря компания Metrotile Europe отметила свое 20-летие. Мероприятие прошло в г. Тонгерен, Бельгия. </div>
+							</div>
+						</div>
+						<div class="b-news__item">
+							<div class="b-news__img">
+								<img class="b-news__img-element" src="img/news1.png" alt="news">
+							</div>
+							<div class="b-news__desc">
+								<div class="b-news__desc-date">5 января</div>
+								<a class="b-news__desc-title">Юбилей — 20 лет!</a>
+								<div class="b-news__desc-text">1 декабря компания Metrotile Europe отметила свое 20-летие. Мероприятие прошло в г. Тонгерен, Бельгия. </div>
+							</div>
+						</div>
+						<div class="b-news__banner" style="background: url(img/news_banner.png) no-repeat;">
+							<div class="b-news__desc">
+								<div class="b-news__desc-date">5 января</div>
+								<a class="b-news__desc-title">Юбилей — 20 лет!</a>
+								<div class="b-news__desc-text">Обучающая программа <br>в области композитной<br> черепицы, с целью<br> поддержания высокого уровня<br> знаний продающего штата<br> сотрудников.</div>
+							</div>
+						</div>
+						<div class="b-news__item">
+							<div class="b-news__img">
+								<img class="b-news__img-element" src="img/news1.png" alt="news">
+							</div>
+							<div class="b-news__desc">
+								<div class="b-news__desc-date">5 января</div>
+								<a class="b-news__desc-title">Юбилей — 20 лет!</a>
+								<div class="b-news__desc-text">1 декабря компания Metrotile Europe отметила свое 20-летие. Мероприятие прошло в г. Тонгерен, Бельгия. </div>
+							</div>
+						</div>
+						<div class="b-news__item">
+							<div class="b-news__img">
+								<img class="b-news__img-element" src="img/news1.png" alt="news">
+							</div>
+							<div class="b-news__desc">
+								<div class="b-news__desc-date">5 января</div>
+								<a class="b-news__desc-title">Юбилей — 20 лет!</a>
+								<div class="b-news__desc-text">1 декабря компания Metrotile Europe отметила свое 20-летие. Мероприятие прошло в г. Тонгерен, Бельгия. </div>
+							</div>
+						</div>
 					</div>
-					<div class="footer_menu_left">
-							<a href="#">О компании</a>
-							<a href="#">Партнерство</a>
-							<a href="#">Учебный центр</a>
-							<a href="#">Пресс центр</a>
-							<a href="#">Где купить</a>
-							<a href="#">Контакты</a>
-							<a href="#">Монтаж</a>
-							<a href="#">Расчет черепицы</a>
-							<a href="#">Акции</a>
-							<a href="#">Карта сайта</a>	
 					</div>
-				</div>
-				<div class="offset-md-1 col-md-2">
-					<div class="footer_menu_left">
-							<a href="#">— MetroBond</a>
-							<a href="#">— MetroRoman </a>
-							<a href="#">— Metrotile Mistral</a>
-							<a href="#">— MetroShake II</a>
-							<a href="#">— MetroClassic</a>
-							<a href="#">— Metrotile Gallo</a>
-							<a href="#">— Metrotile Romana</a>
-							<a href="#">— MetroViksen</a>
-							<a href="#">— MetroCooper</a>
-							<a href="#">— Aquapan</a>	
-					<a data-fancybox data-type="ajax" data-src="call.html" class="button buy">Оставить заявку</a>
-					</div>
-				</div>
-				<div class="offset-md-1 col-md-1">
-					<div class="footer_menu_left">
-						<a href="#" class="new_item gradient">новинки</a>
-							<a href="#">— Metrotile IPanel</a>
-							<a href="#">— Metrotile ISlate</a>
-							<a href="#">— Metrotile IShake</a>
-							<a href="#">— Metrotile IShingle</a>
-					</div>
-				</div>
-				<div class="offset-md-1 col-md-2 footer_address">
-					<b>Адрес</b>
-					<div>105120, Москва, Костомаровский пер., д. 3, офис 423</div>
-					<a class="subscribe" href="#"><b>Подпишитесь на новости</b></a>
-					<div class="madein">СДЕЛАНО В <a href="#"></a></div>
-				</div>
-				<div class="col-md-2 footer_contacts">
-					<b>Контакты</b>
-					<a class="phone" href="tel:74953634432">+7 (495) 363 44 32</a>
-					<a class="phone" href="tel:74957874760">+7 (495) 787 47 60</a>
-					<a class="email" href="mailto:company@metrotile.ru">company@metrotile.ru</a>
-					<a href="#" class="blue_link">Подписаться</a>
-				</div>
 				</div>
 			</div>
-		<a href="#" class="footer_up">наверх</a>
+	</section>
+	<footer class="footer gradient_bg">
+		<div class="container">
+			<div class="row">
+				<div class="footer__col">
+					<div class="footer__logo">© 2014 METROTILE</div>
+					<div class="footer__menu-social social">
+						<a class="social__link" href="#"><i class="demo-icon icon-inst"></i></a>
+						<a class="social__link" href="#"><i class="demo-icon icon-vk"></i></a>
+						<a class="social__link" href="#"><i class="demo-icon icon-facebook"></i></a>
+						<a class="social__link" href="#"><i class="demo-icon icon-vimeo"></i></a>
+						<a class="social__link" href="#"><i class="demo-icon icon-youtube"></i></a>
+						<a class="social__link" href="#"><i class="demo-icon icon-gplus"></i></a>
+					</div>
+					<div class="footer__menu">
+							<a class="footer__menu-link" href="#">О компании</a>
+							<a class="footer__menu-link" href="#">Партнерство</a>
+							<a class="footer__menu-link" href="#">Учебный центр</a>
+							<a class="footer__menu-link" href="#">Пресс центр</a>
+							<a class="footer__menu-link" href="#">Где купить</a>
+							<a class="footer__menu-link" href="#">Контакты</a>
+							<a class="footer__menu-link" href="#">Монтаж</a>
+							<a class="footer__menu-link" href="#">Расчет черепицы</a>
+							<a class="footer__menu-link" href="#">Акции</a>
+							<a class="footer__menu-link" href="#">Карта сайта</a>	
+					</div>
+				</div>
+				<div class="footer__col">
+					<div class="footer__menu">
+							<a class="footer__menu-link" href="#">— MetroBond</a>
+							<a class="footer__menu-link" href="#">— MetroRoman </a>
+							<a class="footer__menu-link" href="#">— Metrotile Mistral</a>
+							<a class="footer__menu-link" href="#">— MetroShake II</a>
+							<a class="footer__menu-link" href="#">— MetroClassic</a>
+							<a class="footer__menu-link" href="#">— Metrotile Gallo</a>
+							<a class="footer__menu-link" href="#">— Metrotile Romana</a>
+							<a class="footer__menu-link" href="#">— MetroViksen</a>
+							<a class="footer__menu-link" href="#">— MetroCooper</a>
+							<a class="footer__menu-link" href="#">— Aquapan</a>	
+					<a data-fancybox data-type="ajax" data-src="call.html" href="#" class="button buy">Оставить заявку</a>
+					</div>
+				</div>
+				<div class="footer__col">
+					<div class="footer__menu">
+						<div class="footer__newitems"><a href="#" class="newitem gradient">новинки</a></div>
+							<a class="footer__menu-link" href="#">— Metrotile IPanel</a>
+							<a class="footer__menu-link" href="#">— Metrotile ISlate</a>
+							<a class="footer__menu-link" href="#">— Metrotile IShake</a>
+							<a class="footer__menu-link" href="#">— Metrotile IShingle</a>
+					</div>
+				</div>
+				<div class="footer__contacts">
+					<div class="row">
+						<div class="col-md-6">
+							<b class="footer__contacts-title">Адрес</b>
+							<div>105120, Москва, Костомаровский пер., д. 3, офис 423</div>
+						</div>
+						<div class="col-md-6">
+							<b class="footer__contacts-title">Контакты</b>
+							<a class="footer__contacts-phone" href="tel:74953634432">+7 (495) 363 44 32</a>
+							<a class="footer__contacts-phone" href="tel:74957874760">+7 (495) 787 47 60</a>
+							<a class="footer__contacts-email" href="mailto:company@metrotile.ru">company@metrotile.ru</a>
+						</div>
+					</div>
+					<div class="row align-items-end">
+						<div class="col-6">
+							<input class="footer__contacts-subscribe" placeholder="Подпишитесь на новости"/>
+						</div>
+						<div class="col-6 d-flex justify-content-start">
+							<a href="#" class="footer__contacts-link blue_link">Подписаться</a>
+						</div>
+						
+					</div>
+					<div class="footer__contacts-madein">СДЕЛАНО В <a class="footer__logo-img" href="#"></a></div>
+				</div>
+			</div>
+			</div>
+		<a href="#" class="footer__up">наверх</a>
 	</footer>
 	<script src="js/scripts.min.js"></script>
-
+	<script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
 </body>
 </html>
